# supplyChain_env

./: .dockerignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  supply_chain_env.py  ui.py  validate.sh
server/: __init__.py  app.py
